--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,10 +1,103 @@
+@import url(https://fonts.googleapis.com/css?family=Press+Start+2P);
+
+.header-container {
+  display: flex;
+  justify-content: center;
+}
+
+.header {
+  margin-top: 50px;
+  padding-top: 10px;
+  width: 80%;
+
+  font-family: 'Press Start 2p';
+  text-align: center;
+  /* border: solid 2px; */
+}
+
 .jumbotron {
   padding: 4rem 2rem;
   margin-bottom: 2rem;
   background-color: var(--bs-light);
-  border-radius: .3rem;  
+  border-radius: .3rem;
 }
 
 #playAgain {
   display: none;
+}
+
+.results-container {
+  font-family: 'Press Start 2p';
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+}
+
+.willToLiveContainer {
+  border: solid 2px black;
+  width: 350px;
+  height: 200px;
+  margin-right: 75px;
+  text-align: center;
+  padding-top: 55px;
+}
+
+
+.timeContainer {
+  border: solid 2px black;
+  width: 350px;
+  height: 200px;
+  margin-left: 75px;
+  padding-top: 55px;
+  text-align: center;
+}
+
+.heroContainer {
+  display: flex;
+  justify-content: center;
+}
+
+
+.employeeContainer img {
+  padding-top: 50px;
+  margin-right: 100px;
+  width: 300px;
+  height: auto;
+}
+
+/* .diceParentContainer {
+  display: inline-flex;
+  align-items: center;
+  justify-content: right;
+  padding-right: 150px;
+} */
+
+.diceContainer img {
+  padding-top: 50px;
+  margin-left: 100px;
+  width: 300px;
+  height: auto;
+}
+
+.statusContainerParent {
+  display: flex;
+  justify-content: center;
+}
+
+.statusContainer {
+  margin-top: 50px;
+  font-family: 'Press Start 2p';
+  border: solid 2px black;
+  height: 200px;
+  width: 450px;
+  padding-top: 55px;
+  text-align: center;
+}
+
+.button-container {
+  font-family: 'Press Start 2p';
+  margin-top: 20px;
+  width: 100%;
+  position: fixed;
+  text-align: center;
 }
